<resources>
    <string name="app_name">MovieMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movie_image">Movie image</string>
    <string name="main_casts">Main Casts</string>
    <string name="user_rating">%1$d%%</string>
    <string name="movie_title_with_year">%1$s (%2$s)</string>
    <string name="movie_runtime"> \u2022 %1$s</string>
    <string name="unrated_movie">UR</string>
    <string name="details">Details</string>
    <string name="language">Language: %1$s</string>
    <string name="homepage">Homepage</string>
    <string name="status">Status: %1$s</string>
    <string name="revenue">Revenue: $%1$s</string>
    <string name="budget">Budget: $%1$s</string>
    <string name="genres">Genres</string>
    <string name="now_playing">Now Playing</string>
    <string name="trending">Trending</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="user_score">User Score</string>
    <string name="browse_movies">Browse Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter movie name</string>
    <string name="genre">Genre</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login_image">Login image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_now">Already have an account? Login Now.</string>
    <string name="favorites">Favorites</string>
    <string name="watchlist">Watchlist</string>
</resources>