<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.ui.MovieDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_backdrop"
                android:contentDescription="Backdrop image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Superman (2025)"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:fontFamily="@font/my_font"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/poster_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/image_movie"
                    android:layout_width="175dp"
                    android:layout_height="260dp"
                    android:src="@color/accent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/certificate_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/certification_bg"
                    android:layout_marginStart="5dp"
                    tools:text="PG-13"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/my_font"
                    app:layout_constraintStart_toEndOf="@id/image_movie"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_layout_release_details"
                    app:layout_constraintStart_toStartOf="@id/certificate_badge"
                    app:layout_constraintTop_toBottomOf="@id/certificate_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="12-12-2024"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/my_font" />

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="(US)"
                        android:fontFamily="@font/my_font"/>

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text=" \u2022 2h 10m"
                        android:fontFamily="@font/my_font" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/linear_layout_release_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_layout_release_details"
                    android:layout_marginTop="5dp"
                    android:maxLines="3"
                    android:fontFamily="@font/my_font"
                    tools:text="Science Fiction, Adventure, Action" />

                <FrameLayout
                    android:id="@+id/user_score_container"
                    app:layout_constraintTop_toBottomOf="@id/tv_genres"
                    app:layout_constraintStart_toEndOf="@id/image_movie"
                    android:layout_marginStart="5dp"
                    android:layout_width="69dp"
                    android:layout_height="69dp">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/rating_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:indeterminate="false"
                        tools:progress="86"
                        app:indicatorSize="60dp"
                        app:trackThickness="5dp"
                        app:indicatorColor="#21d07a"
                        />

                    <TextView
                        android:id="@+id/tv_user_score"
                        android:gravity="center"
                        tools:text="86%"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/my_font"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"/>

                </FrameLayout>
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/user_score"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/my_font"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/user_score_container"
                    app:layout_constraintTop_toTopOf="@id/user_score_container"
                    app:layout_constraintBottom_toBottomOf="@id/user_score_container" />

                <ImageButton
                    android:id="@+id/button_play_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play"
                    android:contentDescription="Play button"
                    android:background="@drawable/icon_button_bg"
                    android:scaleType="centerInside"
                    app:tint="@color/white"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/image_movie"
                    app:layout_constraintTop_toBottomOf="@id/user_score_container"
                    />

                <ImageButton
                    android:id="@+id/button_watchlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bookmark"
                    android:layout_marginStart="5dp"
                    android:contentDescription="Watchlist button"
                    android:background="@drawable/icon_button_bg"
                    android:scaleType="centerInside"
                    app:tint="@color/white"
                    app:layout_constraintStart_toEndOf="@id/button_play_trailer"
                    app:layout_constraintTop_toTopOf="@id/button_play_trailer"
                    app:layout_constraintBottom_toBottomOf="@id/button_play_trailer"
                    />

                <ImageButton
                    android:id="@+id/button_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fav"
                    android:layout_marginStart="5dp"
                    android:contentDescription="Favorite button"
                    app:layout_constraintStart_toEndOf="@id/button_watchlist"
                    app:layout_constraintTop_toTopOf="@id/button_watchlist"
                    app:layout_constraintBottom_toBottomOf="@id/button_watchlist"
                    android:background="@drawable/icon_button_bg"
                    android:scaleType="centerInside"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/overview_section"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster_section"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_tagline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Look up"
                    android:textStyle="italic"
                    android:fontFamily="@font/my_font"/>

                <TextView
                    android:id="@+id/tv_overview_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_tagline"
                    android:text="Overview" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview_text"
                    android:fontFamily="@font/my_font"
                    tools:text="Superman, a journalist in Metropolis, embarks on a journey to reconcile his Kryptonian heritage with his human upbringing as Clark Kent."/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_main_casts_title"
                android:text="@string/main_casts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_font"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_section"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_casts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_main_casts_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_details_title"
                android:text="@string/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_font"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_casts"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_title"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:text="@string/language"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:text="@string/status"
                    android:layout_weight="1"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/my_font"
                        android:text="@string/budget"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/tv_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/my_font"
                        android:text="@string/revenue"
                        android:layout_weight="1"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <TextView
                    android:id="@+id/tv_homepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:drawableEnd="@drawable/ic_link"
                    android:drawableTint="@color/textColor"
                    android:text="@string/homepage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>